Flare v1.05 (WIP, link soon)

Engine features:

* Tileset definitions now support multiple images. (Justin Jacobs)
* Display a message when unable to use a consumable item from the inventory. (Justin Jacobs)
* Add a hint to consumable/book tooltips to expose their interactable nature. (Justin Jacobs)

Engine fixes:

* Fixed incorrect render order for some objects; aka "character partly hidden by front of tent". (Justin Jacobs)
* Fix stats/powers not updating when changing equipment in some cases. (Justin Jacobs)
* Prevent auto-equipping items if they would cause existing items to be unequipped. (Justin Jacobs)
* Removed unused color key attribute parsing from tileset definitions. (Justin Jacobs)
* Fixed building on FreeBSD. (Justin Jacobs)

Translation updates:

* Scottish Gaelic (gd) update (GunChleoc)
* Polish (pl) update (Pawonashi)
* Portuguese (pt) update (Rui)
* Ukrainian (uk) update (Sergiy Borodych)



Flare v1.04 (http://flarerpg.org/index.php/2018/04/19/flare-1-04/)

Engine fixes:

* Fix a regression that caused book text that was not left-aligned to be cut off. (Justin Jacobs)
* Fix a crash when teleporting to the default position of map with a summoned creature. (Justin Jacobs)

Game changes:

* Fall back to Liberation Sans when fancy fonts lack the appropriate glyphs for the current language. (Justin Jacobs)
* Fixed translation script not grabbing subtitles from soundfx/subtitles.txt. (Justin Jacobs)

Translation updates:

* Scottish Gaelic (gd) update (GunChleoc)
* Portuguese (pt) update (Rui)
* Ukrainian (uk) update (Sergiy Borodych)



Flare v1.03 (http://flarerpg.org/index.php/2018/04/17/flare-1-03/)

Engine features:

* Buttons that trigger Events can now be added to books. (Justin Jacobs)
* Add ability to control image display in books via campaign status. (Justin Jacobs)
* Add ability to execute Events upon opening/closing a book. (Justin Jacobs)

Engine fixes:

* Fix crash when using invalid primary stat in stat_per_primary. (Justin Jacobs)