@@ -1333,6 +1333,8 @@ body {
 
 <p><strong>power.meta_power</strong> | <code>bool</code> | If true, this power can not be used on it&rsquo;s own. Instead, it should be replaced via an item with a replace_power entry.</p>
 
+<p><strong>power.no_actionbar</strong> | <code>bool</code> | If true, this power is prevented from being placed on the actionbar.</p>
+
 <p><strong>power.requires_flags</strong> | <code>list(predefined_string)</code> | A comma separated list of equip flags that are required to use this power. See engine/equip_flags.txt</p>
 
 <p><strong>power.requires_mp</strong> | <code>int</code> | Restrict power usage to a specified MP level.</p>
